--- a/beacon-app/partials/job-list.html
+++ b/beacon-app/partials/job-list.html
@@ -1,16 +1,18 @@
 <div>
 	<div class="title-bar">
-		<h2>Beacon Contracting</h2>
-		<h4>Job Costing</h4>
+		<h1>Beacon Contracting</h1>
 	</div>
+		<h4>Job Costing</h4>
 	<div class="main-nav">
-		<ul>
-			<span ng-click="myFilter = null" class="active">All <br> Jobs</span>
-			<span ng-click="myFilter = {jobCode: '40'}">40<br> Slabs</span>
-			<span ng-click="myFilter = {jobCode: '5-50'}">5-50 <br> Curb</span> 
-			<span ng-click="myFilter = {jobCode: '5-60'}">5-60 <br> Sidewalk</span>
-			<span ng-click="myFilter = {jobCode: '5-70'}">5-70 <br> Paving</span>		
+		<section ng-init="myFilter = null; tab =1">
+		<ul class="nav nav-pills">
+			<li ng-click="myFilter = null; tab = 1" ng-class="{ active:tab === 1 }"> All <br>Jobs</li>
+			<li ng-click="myFilter = {jobCode: '40'}; tab = 2" ng-class="{ active:tab === 2 }">40 <br>Slabs</li>
+			<li ng-click="myFilter = {jobCode: '5-50'}; tab = 3" ng-class="{ active:tab === 3 }">5-50 <br> Curb</li> 
+			<li ng-click="myFilter = {jobCode: '5-60'}; tab = 4" ng-class="{ active:tab === 4 }">5-60 <br> Sidewalk</li>
+			<li ng-click="myFilter = {jobCode: '5-70'}; tab = 5" ng-class="{ active:tab === 5 }">5-70 <br> Paving</li>		
 		</ul>
+		</section>
 	</div>
 	<div id="job-results" class="containter-fluid">
 		<div class="row">
@@ -18,7 +20,7 @@
 				<!-- Body Content -->
 				<ul id="triple">
 					<li ng-repeat="job in jobs | filter: myFilter | filter:query | orderBy:orderProp">
-						<a href="#/jobs/{{job.jobName}}"><h5>{{job.jobName}}</h5></a>
+						<a href="#/jobs/{{job.id}}"><h4>{{job.jobName}}</h4></a>
 						<p><em>Job Code: {{job.jobCode}}</em></p>
 						<!-- <p>File Number: {{job.fileNumber}}</p> -->
 						<p>Invoice Date: {{job.billingDate}}</p>
@@ -26,14 +28,15 @@
 						<p>Budget Hours: {{job.budgetHrs}} hrs</p>
 						<p>Budget Units: {{job.budUnits}} {{job.unit}}</p>
 						<p>Budget Yards: {{job.budYds}}</p>
+						<div ng-if="job.pavThickness!=null"><p>Paving Thickness: {{job.pavThickness}}"</p></div>
 						<br>
 					</li>
 				</ul>
 				<div>
-					
+
 				</div>
 			</div>
-			
+
 			<div class="col-md-3">
 
 				<!-- Sidebar Content -->
@@ -73,10 +76,11 @@
 					<div ng-if="query != null">
 						<p>{{getSumBudgetHrs((jobs|filter:myFilter|filter:query))}}</p>	
 					</div>
-					
+
 				</div>
 			</div>
 
 		</div>
 	</div>
+
 </div>
