Updated sidelist with yds per hour and modified job css

--- a/beacon-app/partials/job-detail.html
+++ b/beacon-app/partials/job-detail.html
@@ -67,7 +67,7 @@
     <td>120</td>
     <td>0</td>
     <td>0</td>
-    <td>0</td>
+    <td>{{getBudYardsPerHr(job) | number:2}}</td>
     <td>0</td>
   </tr> 
 </table>
