--- a/beacon-app/css/app.css
+++ b/beacon-app/css/app.css
@@ -130,7 +130,7 @@ th, td {
 	padding: 20px 20px;
 	width: 120px;
 	display: block;
-	margin: 5px 20px;
+	margin: 5yeahpx 20px;
 	text-decoration: none;
 	border: 2px solid darkgray;
 	border-radius: 15px;
@@ -178,10 +178,17 @@ th, td {
 		-moz-border-radius: 15px;
 		text-transform: uppercase;
 }
+
+/*Side Info*/
+.side-info *{
+	display: inline-block;
+}
+
 /*Job Results*/
 
 #job-results ul{
   width:100%;
+  margin-top: 10px;
   margin-bottom:20px;
   overflow:hidden;
   border-top:1px solid #ccc;
@@ -193,6 +200,7 @@ th, td {
   margin: 1%;
   padding: 1%;
   float:left;
+  height: 280px;
   display:inline;
 }
 #double li  { width:46%;} 
