--- a/beacon-app/css/app.css
+++ b/beacon-app/css/app.css
@@ -66,6 +66,15 @@ th, td {
 	float: right;
 }
 
+/* Forms */
+.ng-invalid.ng-dirty {
+	border-color: #FA787E;
+}
+
+.ng-valid.ng-dirty {
+	border-color: #78FA89;
+}
+
 
 /*Navigation*/
 
