updated jobs to show client.  cleaned up production info

--- a/beacon-app/partials/job-detail.html
+++ b/beacon-app/partials/job-detail.html
@@ -6,7 +6,7 @@
   <h4>File Number: &nbsp{{job.fileNumber}}</h4>
   <h4 id="billDate">Billing Date: {{job.billingDate}}</h4> 
   <br> 
-  <h4>GC or Client: &nbsp{{job.gc}}</h4> <br>
+  <h4>GC or Client: &nbsp{{job.client}}</h4> <br>
   
 </div>
 <br>
